[package]
name = "imaged"
version = "0.1.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zshipko/imaged"
license = "ISC"
keywords = ["image", "image-processing"]
documentation = "https://docs.rs/imaged"
description = "An image processing library"

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1"
lazy_static = "1"
halide-runtime = {version = "0.2", optional = true}
glfw = {version = "0.37", optional = true}
gl = {version = "0.14", optional = true}
num_cpus = "1"
docs-rs = []

[build-dependencies]
pkg-config = "0.3"

[features]
default = ["halide"]
halide = ["halide-runtime"]
viewer = ["glfw", "gl"]
