[package]
name = "imaged"
version = "0.4.0"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zshipko/imaged"
license = "ISC"
keywords = ["image", "image-processing"]
documentation = "https://docs.rs/imaged"
description = "An image processing library"

[package.metadata.docs.rs]
features = ["docs-rs", "halide", "viewer"]

[dependencies]
thiserror = "1"
halide-runtime = {version = "0.4", optional = true}
glfw = {version = "0.37", optional = true}
gl = {version = "0.14", optional = true}
num_cpus = "1"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
halide = ["halide-runtime"]
viewer = ["glfw", "gl"]
docs-rs = []
