[package]
name = "imaged"
version = "0.10.1"
authors = ["Zach Shipko <zachshipko@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zshipko/imaged"
license = "ISC"
keywords = ["image", "image-processing"]
documentation = "https://docs.rs/imaged"
description = "Image processing and storage library based on libimaged"

[package.metadata.docs.rs]
features = ["docs-rs", "halide", "viewer"]

[dependencies]
thiserror = "1"
halide-runtime = {version = "0.5", optional = true}
glfw = {version = "0.40", optional = true}
gl = {version = "0.14", optional = true}
num_cpus = "1"

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
halide = ["halide-runtime"]
viewer = ["glfw", "gl"]
all=["viewer", "halide"]
docs-rs = []
